force-app/main/default/objects/PAGA_Payments__c/PAGA_Payments__c.object-meta.xml
<CustomObject>
    <label>PAGA Payment</label>
    <nameField>
        <displayFormat>PP-{0000000}</displayFormat>
        <label>PAGA Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAGA Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>