force-app/main/default/objects/PAGA_Payments__c/fields/Amount_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Payment__c</fullName>
    <label>Amount of Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>