force-app/main/default/objects/PAGA_Payments__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>PAGA Payments</relationshipLabel>
    <relationshipName>PAGA_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>